<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".G_Produit.AjouterProduitActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_back"
        android:src="@drawable/arrow__left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <EditText

        android:id="@+id/edt_nomProd"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/edt_nomprod"
        style="@style/input_style"
        app:layout_constraintTop_toBottomOf="@+id/img_back"

        />
    <EditText

        android:id="@+id/edt_prixProd"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="number"
        android:hint="@string/edt_prixProd"
        style="@style/input_style"
        app:layout_constraintTop_toBottomOf="@+id/edt_nomProd"

        />
    <TextView
        android:id="@+id/tv_catt"
        android:layout_width="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_prixProd"
        android:text="L'unité :"
        tools:ignore="MissingConstraints" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rl_app_choice"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="@id/tv_catt"
        app:layout_constraintTop_toBottomOf="@+id/tv_catt">



    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_submit_prod"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rectange_gradient"
        app:layout_constraintTop_toBottomOf="@+id/rl_app_choice"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_chImage"
            android:textSize="15sp"
            android:layout_centerInParent="true"
            android:textColor="@color/white"/>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>